# orbyte

./: .gitignore  README.md  coverage.xml  mypy.ini  noxfile.py  orbyte.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: developer-guide.md  testing.md
examples/prompts/: greeting.en.j2  greeting.es.j2  greeting.j2
examples/prompts/user_onboarding/: welcome_email.es.j2
prompts/user_onboarding/: welcome_email.en.j2
scripts/: filters.py  filters_factory.py
src/orbyte/: __init__.py  cli.py  core.py  env.py  exceptions.py  resolver.py  validation.py
tests/: conftest.py  test_cli.py  test_cli_filters.py  test_env.py  test_orbyte.py  test_render.py  test_resolver.py  test_validation.py
