[project]
name = "orbyte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1"]

[project.scripts]
orbyte = "orbyte:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["orbyte"]

# Pytest configuration
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = "test_*.py"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov>=5",
]
