[project]
name = "orbyte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ProxyPattern" }]
dependencies = ["jinja2>=3.1", "typer>=0.12.0", "click>=8.0"]

[project.scripts]
orbyte = "orbyte.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["orbyte"]

# Pytest configuration
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "nox>=2024.4.15",
  "types-click",
]

[project.optional-dependencies]
i18n = ["Babel>=2.15"]
cache = ["diskcache>=5.6"]
