[project]
name = "orbyte"
version = "0.1.0"
description = "Filesystem-first prompt templating with locale fallback, powered by Jinja2"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ProxyPattern" }]
license = "MIT"
dependencies = [
    "jinja2>=3.1",
    "typer>=0.12.0",
    "click>=8.1.0,<8.2",
]

[project.scripts]
orbyte = "orbyte.cli:main"

[project.optional-dependencies]
i18n = ["babel>=2.15"]
cache = ["diskcache>=5.6"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.5.0",
    "nox>=2024.4.15",
    "types-click",
    "types-babel",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Pytest + Coverage settings
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
  "-q",
  "--cov=src/orbyte",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov-report=html"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/orbyte"]
omit = [
  "src/**/__init__.py",
  "src/**/__main__.py",
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "def __repr__",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# --- Ruff configuration ---
[tool.ruff]
line-length = 90
target-version = "py39"
extend-exclude = [
  ".git", ".venv", "venv", ".nox", ".tox",
  "dist", "build", "htmlcov", "__pycache__"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true